# labourcan

./: .Rbuildignore  .gitignore  .nojekyll  01_develop_data_processing.html  01_develop_data_processing.qmd  02_develop_visualization.html  02_develop_visualization.qmd  03_labour_main.html  03_labour_main.qmd  03_things_that_didnt_work.html  03_things_that_didnt_work.qmd  DESCRIPTION  README.md  _brand.yml  _quarto.yml  downloadLabourData.sh  index.html  index.qmd  main.py  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  testApi.sh
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: publish.yml
R/: getBikeData.R
data/: 14100022_MetaData.csv  14100355_MetaData.csv  downloadLabourData.sh
notebooks/: labour-explore.qmd  labour.qmd  labour_deploy.qmd  labour_main.qmd
notebooks/labour-explore_files/libs/bootstrap/: bootstrap-567bdbef7b726db212b4a46c5bd0fc28.min.css
py/labourcan/: data_processing.py
site_libs/bootstrap/: bootstrap-0bccfdbefa30b83a2bb1ac6babea8e48.min.css  bootstrap-752bec0286dddee11a9cb791c5aa2394.min.css  bootstrap-cac0ea0390d801d63cde66805b6824d3.min.css  bootstrap-dark-238973e4ed6b772c8a47ecd419fc128e.min.css  bootstrap-dark-a39548cc5d80c23e3558d9b87b52a360.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-399203f6078c9f40aa1bd3ecdeb04a2a.css  quarto-syntax-highlighting-62bd0246437ae56647c7d14e216fe155.css  quarto-syntax-highlighting-dark-814039ad842dfff7883839873f78e99b.css
