[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["py"]

[tool.setuptools.package-dir]
"" = "py"

[project]
name = "labourcan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.18.0",
    "ipykernel>=6.30.1",
    "mizani>=0.14.2",
    "mpl-fontkit>=0.5.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotnine>=0.15.0",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "pyprojroot>=0.3.0",
    "pyyaml>=6.0.2",
]
